[metadata]
name = lois
description = LCM OpenCV Image Spy
long_description = file: README.md
keywords = LCM, OpenCV
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
zip_safe = False
include_package_data = True
setup_requires = setuptools_scm

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.rst, *.md
